--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@radix-ui/react-switch": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.12.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
-    "next": "15.1.8",
+    "next": "^15.1.8",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^5.0.0",
     "sonner": "^2.0.3",
