--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^5.0.0",
